syntax = "proto3";

package epoxy.grpc.reader;

import "google/protobuf/timestamp.proto";
import "Protos/Epoxy/shared.proto"; 
import "Protos/Epoxy/streams.proto"; 
import "Protos/Epoxy/types.proto"; 

message ReadRequest {
	streams.EventStream Stream = 1;
	uint64 position = 2;
}

message IsgEvent {
  shared.IsgId Id = 1;
  streams.EventStream Stream = 2;
  types.EventType Type = 3;
  string Source = 4;
  uint64 position = 5;
  google.protobuf.Timestamp When = 6;
  string Payload = 7;
}

message IsgEventSet {
	repeated IsgEvent events = 1;
}

service Reader {
  rpc Read (ReadRequest) returns (IsgEventSet);
} 

