syntax = "proto3";

option csharp_namespace = "Isnaegrate.Grpc.Events";

import "google/protobuf/timestamp.proto";

message Uid {
  string value = 1;
}

enum EventType {
    Unknown = 0;
    Build = 1;
    Account = 2;
    User = 3;
    Content = 4;
    Test = 5;
}

message IsgEvent {
  Uid Id = 1;
  EventType Type = 2;
  string Source = 3;
  google.protobuf.Timestamp When = 4;
  bytes Payload = 5;
}
